# review-pro

./: .env.example  .gitignore  DEVELOPMENT.md  DOCKER_GUIDE.md  GAP_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_TO_PIXI.md  MISSING_REQUIREMENTS.md  QUICKSTART.md  README.md  REQUIREMENTS.md  RUST_MIGRATION_PLAN.md  SETUP.md  TESTING.md  TESTING_GUIDE.md  coverage.json  docker-compose.yml  pixi.toml  pyproject.toml
backend/: .coveragerc  Dockerfile  conftest.py  pytest.ini  requirements.txt
backend/agents/: __init__.py  adjudicator.py  base_agent.py  interactive_agent.py  multi_agent.py  pattern_comparison.py  triage_agent.py
backend/api/: __init__.py  views.py
backend/apps/authentication/: authentication.py  pipeline.py  urls.py  views.py
backend/apps/authentication/tests/: __init__.py
backend/apps/findings/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/findings/api/: __init__.py  serializers.py  urls.py  views.py
backend/apps/findings/migrations/: 0001_initial.py
backend/apps/findings/tests/: __init__.py  test_api.py  test_models.py  test_serializers.py
backend/apps/organizations/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/organizations/migrations/: 0001_initial.py
backend/apps/organizations/sql/: row_level_security.sql
backend/apps/organizations/tests/: __init__.py  test_models.py
backend/apps/scans/: __init__.py  admin.py  apps.py  events.py  github_app.py  models.py  sarif_parser.py  serializers.py  signals.py  sse.py  storage.py  tasks.py  urls.py  views.py
backend/apps/scans/api/: __init__.py  serializers.py  urls.py  views.py
backend/apps/scans/management/commands/: create_sample_data.py
backend/apps/scans/migrations/: 0001_initial.py
backend/apps/scans/tests/: __init__.py  test_api.py  test_integration.py  test_models.py  test_serializers.py  test_signals.py
backend/apps/users/: admin.py  models.py  serializers.py  signals.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_models.py
backend/config/: __init__.py  asgi.py  celery.py  exceptions.py  settings.py  urls.py  wsgi.py
backend/management/commands/: cluster_findings.py  compare_patterns.py  run_scan.py  test_adjudication.py  test_llm.py  test_temporal.py
backend/scanner/: __init__.py  bandit.py  base.py  ruff.py  sarif_parser.py  semgrep.py
backend/services/: __init__.py  clustering_service.py  embedding_service.py  qdrant_manager.py  temporal_client.py
backend/services/tests/: test_temporal_client.py
backend/workers/: __init__.py  temporal_worker.py
backend/workflows/: __init__.py  adjudication_workflow.py  clustering_workflow.py  hello_workflow.py  llm_test_workflow.py  pattern_comparison_workflow.py  scan_workflow.py
docs/: CRITICAL_ISSUES.md  RATE_LIMITING.md  ROW_LEVEL_SECURITY.md  TEST_PLAN.md
docs/architecture/: ADR-001-multi-tenancy-model.md  ADR-002-finding-deduplication.md  ADR-003-real-time-communication.md  ADR-004-worker-security-model.md  ADR-005-sarif-storage-strategy.md  ADR-006-data-model-normalization.md  ADR-007-authentication-authorization.md  ADR-008-rate-limiting-quotas.md  README.md
examples/: vulnerable_code.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Loading.tsx  index.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: ClusterDetail.tsx  Clusters.tsx  Dashboard.tsx  FindingDetail.tsx  Findings.tsx  Patterns.tsx  ScanDetail.tsx  Scans.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
scripts/: README.md  TESTING_GUIDE.md  check_langroid.sh  coverage_summary.py  create_initial_migrations.sh  run_tests.sh  setup_and_test.sh  setup_migrations.sh  test_platform.sh
worker/: Dockerfile  README.md  build.sh  merge_sarif.py  scan.sh
