[project]
name = "review-pro"
version = "0.1.0"
description = "Multi-tenant security analysis platform with SARIF support"
authors = [{ name = "Review Pro Team" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
# Core Django
Django = "*"
djangorestframework = ">=3.16.1, <4"
django-cors-headers = ">=4.9.0, <5"
django-environ = ">=0.12.0, <0.13"
django-filter = ">=25.2, <26"

# Database
psycopg2-binary = ">=2.9.11, <3"
django-postgres-extra = ">=2.0.9, <3"

# Authentication & Authorization
djangorestframework-simplejwt = ">=5.5.1, <6"
PyJWT = ">=2.10.1, <3"
social-auth-app-django = ">=5.6.0, <6"
social-auth-core = ">=4.7.0, <5"

# Caching & Pub/Sub
redis = ">=5.3.1, <6"
django-redis = ">=6.0.0, <7"
hiredis = ">=3.3.0, <4"

# Object Storage (S3/MinIO)
boto3 = ">=1.40.75, <2"
django-storages = ">=1.14.6, <2"

# Workflow Orchestration - Temporal (NOT Celery)
# Celery removed - see GAP_ANALYSIS.md
temporalio = ">=1.19.0, <2"

# LLM Integration (Core Feature - CRITICAL for POC)
langroid = ">=0.59.19, <0.60"
anthropic = ">=0.73.0, <0.74"
openai = ">=2.8.1, <3"
google-generativeai = ">=0.8.5, <0.9"
litellm = ">=1.0.0"

# Vector Database
qdrant-client = ">=1.16.0, <2"

# API Documentation
drf-spectacular = ">=0.29.0, <0.30"

# Security & Rate Limiting
django-ratelimit = ">=4.1.0, <5"
django-axes = ">=8.0.0, <9"

# Monitoring & Logging
sentry-sdk = ">=2.44.0, <3"
python-json-logger = ">=4.0.0, <5"

# SARIF Processing
sarif-om = ">=1.0.4, <2"

# GitHub Integration
PyGithub = ">=1.59.1, <2"
cryptography = ">=46.0.3, <47"

# Utilities
python-dateutil = ">=2.9.0.post0, <3"
pytz = ">=2025.2, <2026"
requests = ">=2.32.5, <3"
urllib3 = ">=2.5.0, <3"

# Development & Testing
pytest = ">=9.0.1, <10"
pytest-django = ">=4.11.1, <5"
pytest-cov = ">=7.0.0, <8"
pytest-mock = ">=3.15.1, <4"
pytest-asyncio = ">=1.3.0, <2"
factory-boy = ">=3.3.3, <4"
faker = ">=18.13.0, <19"
black = ">=25.11.0, <26"
flake8 = ">=7.3.0, <8"
isort = ">=7.0.0, <8"
mypy = ">=1.18.2, <2"
django-stubs = ">=5.2.7, <6"
djangorestframework-stubs = ">=3.16.5, <4"

# WSGI Server
gunicorn = ">=23.0.0, <24"
uvicorn = ">=0.38.0, <0.39"

[tool.pixi.dependencies]
python = "3.11.*"
pip = ">=25.3,<26"

# System dependencies for Ubuntu/Arch compatibility
postgresql = ">=18.0,<19"
# redis = ">=7"

[tool.pixi.tasks]
# Database tasks
migrate = "python backend/manage.py migrate"
makemigrations = "python backend/manage.py makemigrations"
showmigrations = "python backend/manage.py showmigrations"

# Create initial migrations for all apps in dependency order
makemigrations-users = "python backend/manage.py makemigrations users"
makemigrations-organizations = "python backend/manage.py makemigrations organizations"
makemigrations-authentication = "python backend/manage.py makemigrations authentication"
makemigrations-scans = "python backend/manage.py makemigrations scans"
makemigrations-findings = "python backend/manage.py makemigrations findings"
setup-migrations = { depends-on = ["makemigrations-users", "makemigrations-organizations", "makemigrations-authentication", "makemigrations-scans", "makemigrations-findings"] }

# Django server
runserver = "python backend/manage.py runserver"
shell = "python backend/manage.py shell"
createsuperuser = "python backend/manage.py createsuperuser"

# Temporal workflow tasks (replaced Celery)
temporal-worker = "python backend/workers/temporal_worker.py"

# Testing
test = "pytest backend/"
test-cov = "pytest backend/ --cov=backend/apps --cov-report=html --cov-report=term"
test-verbose = "pytest backend/ -v"
test-failed = "pytest backend/ --lf"                                                # Run last failed tests
setup-and-test = "bash scripts/setup_and_test.sh"  # Full setup: migrations + migrate + test

# Code quality
format = { depends-on = ["format-black", "format-isort"] }
format-black = "black backend/"
format-isort = "isort backend/"
lint = { depends-on = ["lint-flake8", "lint-mypy"] }
lint-flake8 = "flake8 backend/"
lint-mypy = "mypy backend/"
check = { depends-on = ["format", "lint", "test"] }

# Docker tasks
docker-up = "docker compose up -d"
docker-down = "docker compose down"
docker-logs = "docker compose logs -f"
docker-ps = "docker compose ps"

# Production tasks
collectstatic = "python backend/manage.py collectstatic --noinput"
gunicorn = "gunicorn --bind 0.0.0.0:8000 --workers 4 --timeout 120 --chdir backend config.wsgi:application"

# Setup tasks
setup = { depends-on = ["setup-env", "setup-db"] }
setup-env = "cp .env.example .env"
setup-db = { depends-on = ["migrate", "createsuperuser"] }

# Clean tasks
clean = { depends-on = ["clean-pyc", "clean-test"] }
clean-pyc = "find . -type f -name '*.pyc' -delete && find . -type d -name '__pycache__' -delete"
clean-test = "rm -rf .pytest_cache htmlcov .coverage"

[tool.pixi.feature.dev.dependencies]
# Additional dev tools
ipython = "*"
django-debug-toolbar = "*"
django-extensions = "*"

[tool.pixi.feature.dev.tasks]
shell-plus = "python backend/manage.py shell_plus"
notebook = "python backend/manage.py shell_plus --notebook"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pixi
  | _build
  | build
  | dist
  | migrations
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", ".pixi/*", ".venv/*"]
known_django = ["django"]
known_first_party = ["apps", "config"]
sections = [
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]

# pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = "backend"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
testpaths = ["backend"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

# Coverage configuration
[tool.coverage.run]
source = ["backend/apps"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
